# paper-digest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/paper_digest/: __init__.py  batch.py  chat.py  cli.py  extract.py  fetch.py  history.py  models.py  summarize.py  watch.py
tests/: test_batch.py  test_chat.py  test_extract.py  test_fetch.py  test_history.py  test_summarize.py  test_watch.py
